--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -174,6 +174,12 @@ dependencies {
     exclude group: 'com.facebook.flipper'
   }
 
+  implementation ("androidx.appcompat:appcompat:1.3.1") {
+    version {
+      strictly '1.3.1'
+    }
+  }
+
 
   if (enableHermes) {
     def hermesPath = "../../node_modules/hermes-engine/android/";
