--- a/example/package.json
+++ b/example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-relateddigital-example",
-  "version": "2.0.0",
+  "version": "1.5.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -17,7 +17,13 @@
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/stack": "^6.3.16",
-    "@react-native-async-storage/async-storage": "^1.17.10"
+    "@react-native-async-storage/async-storage": "^1.17.10",
+    "lottie-react-native": "^5.1.5",
+    "react-native-rate": "^1.2.9",
+    "@react-native-firebase/analytics": "^12.9.1",
+    "@react-native-firebase/app": "^12.9.1",
+    "@react-native-firebase/crashlytics": "^12.9.1",
+    "@react-native-firebase/messaging": "^12.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
