--- a/example/ios/Podfile
+++ b/example/ios/Podfile
@@ -3,14 +3,29 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '12.4'
 
+target 'RelatedDigitalExampleNotificationServiceExtension' do
+  pod 'RelatedDigitalIOS', '4.0.13'
+end
+
 target 'RelatedDigitalExample' do
   config = use_native_modules!
   use_react_native!(:path => config["reactNativePath"])
-
+  
   pod 'RNRate', :path => '../node_modules/react-native-rate'
-
+  
   use_flipper!({ 'Flipper-Folly' => '2.5.3', 'Flipper' => '0.87.0', 'Flipper-RSocket' => '1.3.1' })
   post_install do |installer|
     flipper_post_install(installer)
+    notification_service_post_install(installer)
+  end
+end
+
+
+
+def notification_service_post_install(installer)
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['APPLICATION_EXTENSION_API_ONLY'] = 'NO'
+    end
   end
 end
