--- a/example/package.json
+++ b/example/package.json
@@ -9,26 +9,27 @@
     "pods": "pod-install --quiet"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.67.4",
-    "react-native-screens": "^3.2.0",
-    "react-native-safe-area-context": "^4.5.0",
-    "@react-navigation/native": "^6.0.0",
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/stack": "^6.3.16",
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "lottie-react-native": "^5.1.5",
-    "react-native-rate": "^1.2.9",
     "@react-native-firebase/analytics": "^12.9.1",
     "@react-native-firebase/app": "^12.9.1",
     "@react-native-firebase/crashlytics": "^12.9.1",
     "@react-native-firebase/messaging": "^12.9.1",
-    "react-native-related-digital": "../"
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.0.0",
+    "@react-navigation/stack": "^6.3.16",
+    "lottie-react-native": "^5.1.5",
+    "react": "18.2.0",
+    "react-native": "0.67.4",
+    "react-native-rate": "^1.2.9",
+    "react-native-related-digital": "../",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
+    "babel-plugin-module-resolver": "^4.0.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "babel-plugin-module-resolver": "^4.0.0"
+    "prettier": "^2.8.7"
   }
 }
