--- a/example/package.json
+++ b/example/package.json
@@ -15,19 +15,24 @@
     "@react-native-firebase/crashlytics": "^12.9.1",
     "@react-native-firebase/messaging": "^12.9.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.0.0",
+    "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.67.4",
+    "react-native-paper": "^5.7.0",
     "react-native-rate": "^1.2.9",
     "react-native-related-digital": "../",
     "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "^3.2.0"
+    "react-native-screens": "^3.2.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-native-vector-icons": "^6.4.13",
     "babel-plugin-module-resolver": "^4.0.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.8.7"
