--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -1,5 +1,7 @@
-apply plugin: "com.android.application"
+apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.huawei.agconnect'
+apply plugin: "com.google.firebase.crashlytics"
 //apply plugin: "com.facebook.react"
 
 import com.android.build.OutputFile
