--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -24,6 +24,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:7.2.2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.gms:google-services:4.3.15'
+    classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
     classpath 'com.huawei.agconnect:agcp:1.7.2.300'
 
 
