--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -324,4 +324,9 @@ def isNewArchitectureEnabled() {
     return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
 }
 
+project.ext.vectoricons = [
+    iconFontNames: [ 'FontAwesome.ttf' ] // Name of the font files you want to copy
+]
+
 apply plugin: 'com.google.gms.google-services'
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
