--- a/example/package.json
+++ b/example/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
-    "ios": "react-native run-ios --simulator='iPhone 14' --trace-warnings",
+    "ios": "react-native run-ios --simulator='iPhone 14'",
     "start": "react-native start",
     "pods": "pod-install --quiet"
   },
