--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -160,9 +160,14 @@ dependencies {
 
   implementation "com.facebook.react:react-native:+"
   implementation 'com.android.support:multidex:1.0.3'
-  implementation 'androidx.core:core-ktx:1.8.0'
+  implementation 'androidx.core:core-ktx:1.6.0'
+
+  //implementation 'com.google.firebase:firebase-core:21.1.1'
+  //implementation 'com.google.firebase:firebase-crashlytics-ktx:18.4.3'
+  //implementation 'com.google.firebase:firebase-analytics-ktx:21.3.0'
 
   implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
+
 
   debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
     exclude group: 'com.facebook.fbjni'
@@ -181,6 +186,7 @@ dependencies {
       strictly '1.3.1'
     }
   }
+
 
 
   if (enableHermes) {
