--- a/example/app.json
+++ b/example/app.json
@@ -1,4 +1,8 @@
 {
   "name": "RelatedDigitalExample",
-  "displayName": "RelatedDigitalExample"
+  "displayName": "RelatedDigitalExample",
+  "expo": {
+    "name": "RelatedDigitalExample",
+    "slug": "RelatedDigitalExample"
+  }
 }
