--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,14 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-clipboard/clipboard": "^1.11.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native-stack": "^6.9.17",
     "react": "18.0.0",
     "react-native": "0.69.5",
     "react-native-fontawesome": "^7.0.0",
     "react-native-related-digital": "file:../sdk",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
