--- a/client/ios/Podfile
+++ b/client/ios/Podfile
@@ -18,6 +18,18 @@ target 'RelatedDigitalNotificationService' do
   
 end
 
+def set_run_script_to_always_run_when_no_input_or_output_files_exist(project:)
+  project.targets.each do |target|
+    run_script_build_phases = target.build_phases.filter { |phase| phase.is_a?(Xcodeproj::Project::Object::PBXShellScriptBuildPhase) }
+    cocoapods_run_script_build_phases = run_script_build_phases.filter { |phase| phase.name.start_with?("[CP]") }
+    cocoapods_run_script_build_phases.each do |run_script|
+      next unless (run_script.input_paths || []).empty? && (run_script.output_paths || []).empty?
+      run_script.always_out_of_date = "1"
+    end
+  end
+  project.save
+end
+
 # Post Install processing for RelatedDigitalNotificationService causing errors
 def notification_service_post_install(installer)
   installer.pods_project.targets.each do |target|
@@ -44,9 +56,15 @@ target 'RelatedDigitalTestClient' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  post_integrate do |installer|
+    main_project = installer.aggregate_targets[0].user_project
+    set_run_script_to_always_run_when_no_input_or_output_files_exist(project: main_project)
+  end
+
   post_install do |installer|
     notification_service_post_install(installer)
     react_native_post_install(installer)
     __apply_Xcode_12_5_M1_post_install_workaround(installer)
+    set_run_script_to_always_run_when_no_input_or_output_files_exist(project: installer.pods_project)
   end
 end
