--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "refresh": "yarn link react-native-related-digital",
     "reinstall": "rm -rf node_modules && yarn",
     "link": "wml add ../sdk node_modules/react-native-related-digital && wml start",
-    "npm-clean-start": "npm start -- --reset-cache"
+    "npm-clean-start": "npm start -- --reset-cache",
+    "adb-reverse-tcp": "adb reverse tcp:8081 tcp:8081",
+    "custom-start": "npm run adb-reverse-tcp && npm start -- --reset-cache"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
