--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,9 @@
     "react-native-related-digital": "file:../sdk",
     "react-native-safe-area-context": "^4.8.1",
     "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "@react-native-firebase/app": "^17.3.2",
+    "@react-native-firebase/messaging": "^17.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
