--- a/client/android/build.gradle
+++ b/client/android/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         minSdkVersion = 23
         compileSdkVersion = 34
         targetSdkVersion = 34
+        kotlin_version = '1.8.0'
 
         if (System.properties['os.arch'] == "aarch64") {
             // For M1 Users we need to use the NDK 24 which added support for aarch64
